Se resumio unidad 6 de Met Sistemas I

--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -35,3 +35,40 @@ A día de hoy existen tres formas o maneras de expresar/escribir las expresiones
 Para esto, todos los lenguajes establecen un conjunto de reglas implícitas y explícitas que determinaran o alteraran el orden en el que se irán realizando las operaciones en una expresión.
 Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de procedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de derecha a izquierda a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que existen lenguajes de programación que establecen otro tipo de reglas, como el caso de *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
 Las reglas explícitas son aquellas que utiliza el programador para alterar la prioridad de los operadores, por lo general se utiliza los paréntesis para lograr esto, alterando así la procedencia y la asociatividad establecidas por el lenguaje.
+
+## Evaluación de Operandos
+
+Por lo general, las políticas en cuanto a la evaluación de los operandos es establecida por los lenguajes al momento de su diseño. Al momento de resolver una expresión, el operando puede que ya haya sido evaluado o puede que no todos los operandos hayan sido evaluados, de este último caso se desprenden mecanismos como la ***evaluación perezosa***.
+Las variables y constantes se evalúan obteniendo su valor desde memoria, aunque las constantes no siempre son evaluadas, por lo general, si la constante forma parte de instrucciones en lenguaje máquina, no se requiere que estas sean traídas de memoria. Para las expresiones que se encuentran entre paréntesis, tanto los operadores como los operandos son evaluados y el valor obtenido de la resolución de la expresión es usado como operando.
+
+#### Efectos Colaterales
+
+Los efectos colaterales son provocados por las funciones o procedimientos, estos ocurren cuando una función modifica uno de sus parámetros o modifica una variable global alterando el ambiente de ejecución.
+Tomemos como ejemplo la siguiente expresión: ***a \* f(x) + a***, antes de efectuarse cualquier operación se evalúan ***a*** y ***f(x)***, posiblemente en ese orden, el problema surge cuando ***f(x)*** modifica el valor de ***a***, lo que provocaría que la segunda evaluación de ***a***, produzca un resultado no esperado.
+Ahora bien, los efectos colaterales se pueden evitar de la siguiente manera:
+
+1. Deshabilitando los efectos colaterales en la evaluación de la función, esto se puede lograr eliminando los parámetros que provengan de un I/O, o negándole a las funciones el acceso a las variables globales. Todo esto repercutiendo en la flexibilidad del lenguaje.
+2. Imponiendo claramente el orden de evaluación, es decir, que todos los parámetros sean evaluados con alteración como en el caso de Java, aunque esto afecte las optimizaciones que se puedan hacer en ejecución.
+
+#### Transparencia Referencial
+
+Es una característica de los programas que permite que dos expresiones que tienen el mismo valor, puedan sustituirse entre sí en cualquier parte del programa, sin afectar la acción del mismo. Este concepto está muy relacionado con los efectos colaterales, ya que una función se dice que posee transparencia referencial si no genera ningún efecto colateral. Este concepto es más que nada empleado por los lenguajes puramente funcionales, en donde el valor de una función depende del valor de los parámetros que se le pase, siendo cercano a las funciones matemáticas, lo cual hace que la semántica de los programas escritos en estos lenguajes sea mucho más fácil de entender.
+
+#### Sobrecarga de Operadores
+
+Como ya vimos en la unidad 4 en la sección de [[1. Sistema de Tipos#Polimorfismo | Pilomorfismo]], cuando un operador está sobrecargado, significa que puede operar sobre muchos tipos de datos diferentes, si bien este mecanismo facilita las escritura de los programas, se pierde un poco la legibilidad al momento de debugger los programas, además de que el traductor pierde capacidades para detectar errores. Estos defectos pueden solucionarse con el uso de nuevos símbolos de operación o dándole la posibilidad al programador de crear sus propios operadores, como es el caso de C++ y C#, eso si, la inserción de un nuevo símbolo va a depender del dominio de aplicación de ese lenguaje.
+
+#### Evaluación en Cortocircuito
+
+Este tipo de eventos ocurren cuando en una expresión se determina el resultado de la operación, sin evaluar todos los operadores y/u operandos. Por Ej.: viendo la siguiente expresión ***(10 \* var) \* (b / 5)***, en caso de que ***var*** sea 0 no es necesario evaluar el resto de la expresión porque todo número multiplicado por cero es cero.
+Hay situaciones en la que pueden ocurrir errores porque se realiza una evaluación en sin cortocircuito, como es el caso del siguiente código en Java:
+
+```java
+int index = 1;
+while (index <= length) & (LIST[index] != key) {
+	index++
+}
+```
+
+En este caso, lo que va a ocurrir es que se producirá un error en ejecución, ya que la posición máxima del arreglo es de $length - 1$.
+Para solucionar este problema podemos especificar si queremos realizar una evaluación completa de las expresiones o realizar una evaluación en cortocircuito, por ejemplo Java cuenta con el operador ***&&***, para la evaluación en cortocircuito y ***&***, para la evaluación de ambos operandos.
