Resumen de la parte de sentencias de la unidad V - LP

--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -2,7 +2,7 @@ Las expresiones son construcciones sintácticas que permiten al programador camb
 Un aspecto muy importante a resaltar es la importancia de la sintaxis y la semántica de las expresiones, debido a que cada lenguaje de programación puede tratar a las expresiones de maneras distintas, como veremos más adelante.
 
 ## Clasificación de las Expresiones
-
+Expresiones
 - **Expresiones Aritméticas**: El principal uso y propósito de estas expresiones son la de resolver cálculos matemáticos, las expresiones aritméticas están compuestas por *operandos*, *operadores*, *paréntesis* y *llamadas a funciones*. A su vez, estas pueden ser clasificadas de acuerdo a la cantidad de operandos requeridos para realizar la operación en:
 	- Operadores Unarios: requieren de un solo operando para realizar la operación. Por Ej.: ***(- a)***.
 	- Operadores Binarios: requieren dos operandos para realizar la operación. Por Ej.: ***(a \* b)***.
