--- a/3° Año/Metodología de la Investigación/1. Introducción.md
+++ b/3° Año/Metodología de la Investigación/1. Introducción.md
@@ -73,3 +73,24 @@ Por otro lado, una teoría, dentro de la ciencia, es una explicación probada y 
 >Son incoherentes con el cuerpo teórico de disciplinas relacionadas, invalidando las explicaciones admitidas sin ofrecer alternativas mejores para la explicación de los mismos fenómenos ni reconocer la necesidad de hacerlo.
 >Son inmutables. Al no tener bases experimentales, no cambian incluso ante nuevos descubrimientos (como excepción especial están las ciencias a priori, concretamente las matemáticas y la lógica). La máxima autoridad teórica se le sigue atribuyendo al fundador o fundadores de la disciplina, y sus enseñanzas son tratadas como escrituras sagradas.
 >Utilizan ante el público un lenguaje oscuro, o emplean términos que tienen un significado preciso en ciencia con sentidos totalmente diferentes.
+
+#### Las Preguntas de Investigación
+
+En un sentido amplio, el objetivo de la investigación en cualquier ciencia radica en *responder preguntas y adquirir conocimiento* acerca del “universo observable”. Las preguntas de investigación son el primer paso para comenzar una investigación, es la meta que buscaremos responder y será nuestra guía durante todo el proceso de investigación. No podemos comenzar a redactar o preparar un proyecto de investigación si no tenemos pregunta de investigación identificada. La pregunta de investigación tiene que cumplir 3
+condiciones indispensables:
+
+- **Concisa**: lenguaje sencillo y claro. Cualquier persona, incluso sin formación en nuestro campo, debe entender la pregunta. Frases cortas y directas, nada de lenguaje pomposo y pretencioso.
+- **Alcanzable**: la pregunta debe tener respuesta posible y la recogida de datos para responderla debe ser viable.
+- **Relevante**: se debe defender la importancia de dedicar una investigación a responder dicha pregunta, argumentando los beneficios e impactos que produciría responderla: a nivel teórico, empírico y social.
+
+Existe un protocolo a seguir para idear preguntas de investigación. Los 3 pasos son:
+
+1. **Definir un problema o asunto de investigación**: En un sentido amplio, se delimita el área general donde sé trabajará. Por Ej.: la influencia de la inconsistencia en procesos de razonamiento.
+2. **Delimitar el problema o asunto de investigación**: Se debe concretar y especificar claramente qué estudiaremos. Por Ej.: la inconsistencia provoca que se obtengan conclusiones irrelevantes al realizar inferencias en lógicas clásicas.
+3. Aplicar cinco estrategias al problema delimitado para que surjan varias preguntas de investigación:
+	1. Preguntarse por una o varias causas del problema o asunto. Ej.: ¿De dónde surgen las inconsistencias? ¿El método de razonamiento es el problema?
+	2. Preguntarse por las consecuencias del problema o asunto en algún ámbito. Ej.: ¿En el lenguaje X la inconsistencia influye en el razonamiento?
+	3. Pensar una solución al problema o asunto. Ej.: ¿Podemos cambiar el proceso de inferencia para tolerar inconsistencias? ¿Podemos directamente alterar el conocimiento inconsistente para volverlo consistente?
+	4. Preguntarse si el problema o asunto sucede en otro ámbito y preguntarse por qué o qué consecuencias tiene. Ej.: en bases de datos relacionales, ¿existe la inconsistencia? ¿Qué efectos tiene?
+	5. Preguntarse si el problema o asunto actual sucedía antes, o si el problema o asunto pasado sucede hoy en día. Ej.: antes de la existencia de sistemas abiertos/interconectados, ¿encontrábamos inconsistencias? ¿En qué medida?
+
