--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -11,7 +11,7 @@ En un sentido amplio, el objetivo de la investigación en ciencia radica en resp
 >
 >Explorar lo desconocido, Investigar un campo que nadie ha investigado antes. Explorar lo inesperado, obtener resultados inesperados e investigar nuevas direcciones de trabajo en un campo ya existente. El uso de los datos, interpretar los datos de nuevas formas. Herramientas, técnicas, procedimientos y métodos; aplicar nuevas herramientas y técnicas a problemas alternativos o intentar métodos/procedimientos en nuevos contextos
 
-#### Contribución:
+#### Contribución
 
 La investigación está planteada para extender el cuerpo de conocimiento y comprensión universal (en contraste con extender el conocimiento y comprensión del investigador únicamente). En cuanto al tamaño de la contribución, no es necesario resolver todos los problemas del mundo de una sola vez. Tampoco es suficiente si la misma es un incremento insignificante. Puede ser difícil de medir para alguien inexperimentado.
 
