Correcciones varias de un lote de lugares

--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -2,7 +2,7 @@ Las expresiones son construcciones sintácticas que permiten al programador camb
 Un aspecto muy importante a resaltar es la importancia de la sintaxis y la semántica de las expresiones, debido a que cada lenguaje de programación puede tratar a las expresiones de maneras distintas, como veremos más adelante.
 
 ## Clasificación de las Expresiones
-Expresiones
+
 - **Expresiones Aritméticas**: El principal uso y propósito de estas expresiones son la de resolver cálculos matemáticos, las expresiones aritméticas están compuestas por *operandos*, *operadores*, *paréntesis* y *llamadas a funciones*. A su vez, estas pueden ser clasificadas de acuerdo a la cantidad de operandos requeridos para realizar la operación en:
 	- Operadores Unarios: requieren de un solo operando para realizar la operación. Por Ej.: ***(- a)***.
 	- Operadores Binarios: requieren dos operandos para realizar la operación. Por Ej.: ***(a \* b)***.
@@ -22,18 +22,18 @@ A día de hoy existen tres formas o maneras de expresar/escribir las expresiones
 	- Polaca: ***\* + a b - c a***. Esta no es muy utilizada debido a que es difícil para los traductores de los lenguajes establecer cuáles son los operandos de la operación.
 	- Polaca Cambridge: ***(\*(+ a b) (- c a))***. Esta notación es conocida por ser la utilizada por *Lisp*.
 - **Postfija**: los operadores en esta forma se encuentran del lado derecho de los operandos, este tipo de notación no es muy empleada por los lenguajes de programación dentro de sus programas, pero sí es muy común de ver en las representaciones en tiempo de ejecución o en los códigos intermedios. También cuenta con varias formas alternativas de notación.
-	- Sufija: ***((a, b)+, (c, a)-)\****.
-	- Inversa o Polaca Inversa: ***a b + c a - \****.
+	- Sufija: ((a, b)+, (c, a)-)\*.
+	- Inversa o Polaca Inversa: a b + c a - \*.
 - **Infija**: Es la utilizada por los seres humanos en las operaciones aritméticas convencionales.
 
 >[!check] Ventajas y Desventajas de cada Notación
 >Tanto la notación *prefija* como *postfija* tienen como ventaja que es mucho más fácil representar operaciones con mucha cantidad de operandos, además las operaciones son fáciles de codificar y la escritura es mucho más general. Como desventaja está el hecho de que son complicadas de leer y entender, sin mencionar que notaciones como la polaca debido a la ausencia de paréntesis es difícil determinar la aridad o cantidad de operandos para un operador.
->Por otro lado, la notación Infija está mucho más legible, debido a que se encuentra mucho más cercana a la notación matemática y aritmética tradicional. Como desventaja mayor es que para operaciones distintas a las binarias, esta notación debe compilarse a otras como la postfija, además que requieren de paréntesis o reglas adicionales del lenguaje cuando aparecen varios operadores, sin contar que la traducción de los programas se tornan más complejas.
+>Por otro lado, la notación Infija está mucho más legible, debido a que se encuentra mucho más cercana a la notación matemática y aritmética tradicional. Como mayor desventaja se encuentra el hecho de que para operaciones distintas a las binarias, esta notación debe compilarse a otras notaciones como la postfija, además que requieren de paréntesis o reglas adicionales del lenguaje cuando aparecen varios operadores, sin contar que la traducción de los programas se tornan más complejas.
 
 ## Evaluación de los Operadores
 
 Para esto, todos los lenguajes establecen un conjunto de reglas implícitas y explícitas que determinaran o alteraran el orden en el que se irán realizando las operaciones en una expresión.
-Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de procedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de derecha a izquierda a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que existen lenguajes de programación que establecen otro tipo de reglas, como el caso de *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
+Dentro de las reglas implícitas, se encuentran las reglas de ***precedencia*** que definen el orden en el que se evalúan los operadores adyacentes con distintos niveles de procedencia, es decir, qué operación se resuelve primero. Además, se encuentran las reglas de ***asociatividad***, que establecen el orden en el que se evalúan y resuelven los operadores adyacentes con el mismo nivel de precedencia, en la mayoría de los lenguajes de programación, la asociatividad es de izquierda a derecha a excepción de la exponenciación que se resuelve de derecha a izquierda. Hay que aclarar que existen lenguajes de programación que establecen otro tipo de reglas, como el caso de *APL*, donde todos los operadores tienen la misma prioridad y la asociatividad es de derecha a izquierda para todas las expresiones.
 Las reglas explícitas son aquellas que utiliza el programador para alterar la prioridad de los operadores, por lo general se utiliza los paréntesis para lograr esto, alterando así la procedencia y la asociatividad establecidas por el lenguaje.
 
 ## Evaluación de Operandos
@@ -61,7 +61,7 @@ Como ya vimos en la unidad 4 en la sección de [[1. Sistema de Tipos#Polimorfism
 #### Evaluación en Cortocircuito
 
 Este tipo de eventos ocurren cuando en una expresión se determina el resultado de la operación, sin evaluar todos los operadores y/u operandos. Por Ej.: viendo la siguiente expresión ***(10 \* var) \* (b / 5)***, en caso de que ***var*** sea 0 no es necesario evaluar el resto de la expresión porque todo número multiplicado por cero es cero.
-Hay situaciones en la que pueden ocurrir errores porque se realiza una evaluación en sin cortocircuito, como es el caso del siguiente código en Java:
+Hay situaciones en la que pueden ocurrir errores porque se realiza una evaluación sin cortocircuito, como es el caso del siguiente código en Java:
 
 ```java
 int index = 1;
@@ -71,4 +71,4 @@ while (index <= length) & (LIST[index] != key) {
 ```
 
 En este caso, lo que va a ocurrir es que se producirá un error en ejecución, ya que la posición máxima del arreglo es de $length - 1$.
-Para solucionar este problema podemos especificar si queremos realizar una evaluación completa de las expresiones o realizar una evaluación en cortocircuito, por ejemplo Java cuenta con el operador ***&&***, para la evaluación en cortocircuito y ***&***, para la evaluación de ambos operandos.
+Para solucionar este problema podemos especificar si queremos realizar una evaluación completa de las expresiones o realizar una evaluación en cortocircuito, por ejemplo Java cuenta con el operador ***&&***, para la evaluación en cortocircuito y ***&***, para la evaluación de ambos operandos. Aunque otros lenguajes de programación no brinda esa funcionalidad y es necesario saber que tipo de evaluación realizan en la ejecución.
