--- a/3° Año/Metodología de Sistemas I/Unidad 7/1. Lenguaje Unificado de Modelado - UML.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 7/1. Lenguaje Unificado de Modelado - UML.md
@@ -1,6 +1,10 @@
-El Lenguaje Unificado de Modelado (UML) es un lenguaje de modelado visual que se utiliza para ***especificar***, ***visualizar***, ***construir*** y ***documentar*** parte de un sistema de software desde distintos puntos de vista del sistema, en cierto modo simplifica y ayuda a comprender un sistema desde distintos puntos de vista.
+El Lenguaje Unificado de Modelado (UML) es un lenguaje de modelado visual que se utiliza para ***especificar***, ***visualizar***, ***construir*** y ***documentar*** parte de un sistema de software, desde distintos puntos de vista del sistema, en cierto modo simplifica y ayuda a comprender un sistema desde distintos puntos de vista.
 Es un lenguaje de modelado de propósito general que define una notación y un metamodelo, con el cual podemos construir otros modelos. Se puede utilizar en las diferentes etapas del ciclo de vida del desarrollo de software y es independiente del proceso de desarrollo de software.
-El modelado de los sistemas es muy importante, ya que permite captar los aspectos importantes del sistema que se está modelando, desde un cierto punto de vista y omitir el resto. Se pretende que este modelo sea fácil de utilizar, que sirva para ciertos propósitos y que describa el sistema final. 
+El modelado de los sistemas es muy importante, ya que permite captar los aspectos importantes del sistema que se está modelando, desde un cierto punto de vista y omitir el resto. Se pretende que este modelo sea fácil de utilizar, que sirva para ciertos propósitos y que describa el sistema final.
+
+>[!tldr] ¿Qué es un Modelo?
+>Un modelo es una representación simplificada y abstracta de la realidad, que nos brinda las características esenciales de un objeto o sistema, omiten detalles que no son esenciales. Nos sirven para comprender, visualizar, describir, comunicar o simular algo que es difícil de entender. Ejemplos de modelos pueden ser: un plano de una casa, un wireframe para una web
+
 Un modelo tiene semántica, notación y puede adoptar diversos formatos que incluyen texto y gráficos. Se construye con un lenguaje de modelado como por ejemplo UML.
 
 #### Áreas Conceptuales abarcadas por el UML
@@ -18,7 +22,7 @@ Un modelo tiene semántica, notación y puede adoptar diversos formatos que incl
 	- Asociación.
 	- Generalización.
 	- Agregación.
-- **Diagrama de Objetos**: Un diagrama de objetos muestra las instancias de las clases y los enlaces específicos entre esas instancias en un momento determinado. Cada objeto es una instancia de una clase las cuales representan entidades del mundo real.
+- **Diagrama de Objetos**: Un diagrama de objetos muestra las instancias de las clases y los enlaces específicos entre esas instancias en un momento determinado. Cada objeto es una instancia de una clase, las cuales representan entidades del mundo real.
 - **Diagrama de Componentes**: Un diagrama de componentes muestra los componentes de un sistema, así como las dependencias entre los componentes. Un componente es una unidad ejecutable independiente que proporciona servicios a otros componentes o utiliza los servicios de otros componentes.
 - **Diagrama de Estructura Compuesta**: Los diagramas de estructura compuesta descomponen un objeto o un componente, en tiempo de ejecución, y muestran las diversas interfaces y realizaciones vinculadas a ese objeto.
 - **Diagrama de Despliegue**: El diagrama de despliegue muestra la configuración en funcionamiento del sistema, incluyendo software y hardware. Se representa mediante nodos y las relaciones entre ellos, cada nodo es una unidad material capaz de recibir y ejecutar elementos de software, dichos nodos contienen elementos de software en su forma física, conocida como artefactos. Por ej. archivos ejecutables, bibliotecas compartidas, etc. El principal problema con este tipo de diagramas es que no existen formas alternativas de representar los distintos componentes de la infraestructura.
@@ -42,7 +46,7 @@ Un modelo tiene semántica, notación y puede adoptar diversos formatos que incl
 	- **Entorno del sistema**: Generalmente, cuando se grafica un diagrama de caso de uso, el sistema es delimitado, todos los actores están por fuera del límite y todos los casos de uso se encuentran dentro de este.
 
 >[!tldr] Descripción de los Casos de Uso
->Para cada caso de uso representada en la forma gráfica, existe una descripción detallada de todos la información que requiere cada caso de uso para ejecutarse o llevarse a cabo correctamente, al igual que las posibles alternativas, la forma de descripción no está estandarizada y varía de acuerdo a la bibliografía que se seleccione.
+>Para cada caso de uso representado en la gráfica, existe una descripción detallada de todos la información que requiere cada caso de uso para ejecutarse o llevarse a cabo correctamente, al igual que las posibles alternativas. La forma de descripción no está estandarizada y varía de acuerdo a la bibliografía que se seleccione.
 
 - **Diagrama de Máquina de Estados**: Un diagrama de máquina de estados describe el comportamiento de un objeto en forma de posibles estados y transiciones desencadenadas por varios eventos.
 - **Diagrama de Actividad**: Un diagrama de actividad muestra el flujo de control entre una serie de tareas o actividades.
