--- a/3° Año/Metodología de Sistemas I/Unidad 7/2. Proceso Unificado de Racional - RUP.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 7/2. Proceso Unificado de Racional - RUP.md
@@ -24,7 +24,7 @@ Muchas veces para representar mejor este modelo se realiza una gráfica, en dond
 1. **Inicio**: Se define el alcance del proyecto y se desarrollan los casos de negocio. Se realiza una prueba de factibilidad del sistema a construir, se identifican los casos de uso y los posibles riesgos, se obtiene una visión del producto asociado al negocio y se crea un plan para la fase de elaboración.
 2. **Elaboración**: Se planifica el proyecto, se especifican en detalle la mayoría de los casos de uso y se diseña la arquitectura del sistema. Se transforman los requerimientos en partes del sistema, se define la arquitectura que se va a utilizar para la implementación, se busca mitigar el riesgo y además en esta etapa se planifican las actividades, recursos, tiempos, hitos, entre otros, para la fase de construcción.
 3. **Construcción**: Se construye el producto. En esta etapa se completa el análisis del sistema, se desarrolla la mayor parte del diseño e implementación del sistema, se elabora una versión de prueba del producto, al igual que un manual de usuario y se realiza una planificación de implementación para una operatividad inicial.
-4. **Transición**: El producto se convierte en versión beta, se corrigen problemas y se incorporan mejoras sugeridas en la revisión. Se entrega esta versión beta al usuario para que la pruebe, basándose en estas pruebas se obtiene una retroalimentación que servirá para realizar mejora en el sistema, este proceso se repetirá las veces que sea necesario hasta obtener una versión final. Por último, se capacita a los usuarios y se brinda soporte al sistema.
+4. **Transición**: El producto se convierte en versión beta, se corrigen problemas y se incorporan mejoras sugeridas en la revisión. Se entrega esta versión beta al usuario para que la pruebe, basándose en estas pruebas se obtiene una retroalimentación que servirá para realizar mejoras en el sistema, este proceso se repetirá las veces que sea necesario hasta obtener una versión final. Por último, se capacita a los usuarios y se brinda soporte al sistema.
 
 ---
 
