--- a/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
@@ -1,13 +1,13 @@
 ### Asignaciones
 
 Es un mecanismo que permite a los programadores cambiar el valor de una variable o alterar el estado de ejecución de un programa. Este tipo de sentencias se encuentran presentes por lo general en los lenguajes imperativos y orientados a objetos.
-En caso todos los lenguajes de programación la sintaxis de una sentencia de asignación es siempre la misma, lo que cambia es el operador que utiliza cada uno para denotar esa sentencia. En algunos lenguajes el operador de asignación puede estar sobrecargado, esto quiere decir que se va a utilizar para más de un tipo de operación, lo que facilita la escritura de los programas, pero los vuelve menos legibles.
+En todos los lenguajes de programación la sintaxis de una sentencia de asignación es siempre la misma, lo que cambia es el operador que utiliza cada uno para denotar esa sentencia. En algunos lenguajes el operador de asignación puede estar sobrecargado, esto quiere decir que se va a utilizar para más de un tipo de operación, lo que facilita la escritura de los programas, pero los vuelve menos legibles.
 
 - **Asignación Múltiple**: Permite asignar un valor a más de un identificador. Por Ej.: en PL/I se puede escribir la siguiente sentencia de asignación -> ***SUMA, TOTAL = 0***.
 - **Asignación Condicional**: Algunos lenguajes permiten utilizar expresiones condicionales como asignación. Por Ej.: en Perl podemos realizar la siguiente sentencia ->
 	- **(\$ban ? \$cont1 : \$cont2) = 0;**. Aunque es un poco inútil, ya que se va a asignar 0 a cualquiera de los dos resultados.
 
-En lenguajes como C se pueden combinar las operaciones de incremento o decremento con la sentencia de asignación, por ejemplo, ***sum = ++count;***. Aunque también nos da la posibilidad de utilizar operadores compuestos, estos se usan cuando la variable destino aparece como primer operando de la expresión, el mejor ejemplo de esto es la siguiente sentencia, ***sum += value***;.
+En lenguajes como C se pueden combinar las operaciones de incremento o decremento con la sentencia de asignación, por ejemplo, ***sum = ++count;***. Aunque también nos da la posibilidad de utilizar ***operadores compuestos***, estos se usan cuando la variable destino aparece como primer operando de la expresión, el mejor ejemplo de esto es la siguiente sentencia, ***sum += value***;.
 
 ##### Asignación en Modo Mixto
 
@@ -46,17 +46,13 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 >La mayoría de los lenguajes de programación permiten añadir sentencias de selección bidireccionales dentro de otras sentencias bidireccionales, esto atrae problemas de ambigüedad, como se vio en la [[1. Sintaxis#Características Generales de una Buena Sintaxis| Unidad 2]]. Para resolver eso, los lenguajes encontraron múltiples mecanismos mediante los cuales se puede solucionar este problema:
 >- Mediante las reglas de la semántica estática, por ejemplo en Pascal, el ***else*** formará parte del primer ***if*** que haya abierto.
 >- Uso de sentencias compuestas, por ejemplo en el caso de Perl, para delimitar una sentencia utiliza las llaves.
->- Uso de delimitadores de sentencia, muchos lenguajes de programación utilizan palabras como el ***if-endif*** para delimitar el alcance de la sentencia condicional.
+>- Uso de delimitadores de sentencia, muchos lenguajes de programación utilizan los "**;**" al finalizar cada sentencia.
 
 - **Selectores Multiples**: Permite la selección de una entre cualquier n número de sentencias o grupo de sentencias, generalmente conocido como ***case*** o ***switch***, el comportamiento de este tipo de selectores varía de un lenguaje a otro, por ejemplo en Ada la expresión de control puede ser de cualquier tipo y en caso de que el valor no este representado se arroja un error, sin mencionar que Ada solo ejecutara el código del segmento seleccionado. Por otro lado, en C las expresiones de control solo pueden ser de tipo entero, y se ejecutarán las sentencias hasta que se encuentre un difurcador implícito (en este caso la palabra ***break***), además se puede agregar a la estructura una cláusula ***default***, que se va a ejecutar siempre que dicho valor no esté representado en la estructura de control.
 
 ##### Iteración
 
 Permiten que una sentencia o grupo de sentencias se ejecuten cero o más veces, la ventaja con la que cuentan los lenguajes que incorporan este tipo de estructuras es que los vuelve más flexibles, la escritura de los programas se torna más simple y como consecuencia los programas resultantes son más cortos, al igual que las estructuras de selección, la secuencia de iteración sé pueden categorizar en:
-
-- Controladas por un contador.
-- Controladas lógicamente.
-- Ambas.
 
 - **Sentencias iterativas controladas por contador**: Este tipo de estructuras constan de 3 elementos principales, una variable de loop la cual va a especificar el valor inicial, una expresión de control para la variable y el incremento que va a sufrir la variable de loop en cada iteración. Esta estructura resulta extremadamente útil cuando la cantidad de ciclos que se debe realizar en conocida. Esta estructura mejora la legibilidad y confiabilidad de los programas y evita que se generen resultados inesperados.
 - **Sentencias iterativas controladas lógicamente**: Estas estructuras se utilizan cuando no se sabe la cantidad de iteraciones que se deben realizar para resolver el problema. Al igual que en las sentencias de selección, en estas estructuras también se deben tener algunas consideraciones en cuanto al diseño, en primer lugar se debe establecer si la evaluación de la condición va a ser previa a entrar al loop (un ciclo while clasico) o si la evaluación va a ser posterior al entrar al loop (do-while). Existen lenguajes de programación que emplean ambos métodos, pero otros que eligen solo una opción sobre la otra, como es el caso de Ada.
