Agrego lo de implementación en memoria

--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -47,8 +47,8 @@ Los efectos colaterales son provocados por las funciones o procedimientos, estos
 Tomemos como ejemplo la siguiente expresión: ***a \* f(x) + a***, antes de efectuarse cualquier operación se evalúan ***a*** y ***f(x)***, posiblemente en ese orden, el problema surge cuando ***f(x)*** modifica el valor de ***a***, lo que provocaría que la segunda evaluación de ***a***, produzca un resultado no esperado.
 Ahora bien, los efectos colaterales se pueden evitar de la siguiente manera:
 
-1. Deshabilitando los efectos colaterales en la evaluación de la función, esto se puede lograr eliminando los parámetros que provengan de un I/O, o negándole a las funciones el acceso a las variables globales. Todo esto repercutiendo en la flexibilidad del lenguaje.
-2. Imponiendo claramente el orden de evaluación, es decir, que todos los parámetros sean evaluados con alteración como en el caso de Java, aunque esto afecte las optimizaciones que se puedan hacer en ejecución.
+1. Se puede deshabilitar los efectos colaterales en la evaluación de la función, esto se logra eliminando los parámetros que provengan de un I/O, o negándole a las funciones el acceso a las variables globales. Todo esto repercutiendo en la flexibilidad del lenguaje.
+2. Imponiendo claramente el orden de evaluación, por ejemplo, en Java todos los parámetros sean evaluados con alteración, aunque esto afecte las optimizaciones que se puedan hacer en ejecución.
 
 #### Transparencia Referencial
 
