--- a/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
@@ -39,7 +39,7 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 
 - **Bidireccionales**: Es el típico mecanismo de control del tipo ***if-then-else*** que varios lenguajes de programación poseen. Para este tipo de estructura se debe tener algunas consideraciones a la hora del diseño:
 	1. El tipo de sentencia que va a controlar, estas pueden restringirse únicamente a expresiones booleanas, o también permitir expresiones aritméticas como es el caso de C.
-	2. La forma de la expresión de control, es decir, como va a ser escrita sintácticamente.
+	2. La forma de la expresión de control, es decir, la manera en que se construye sintácticamente la condición que determina la ejecución de ciertas partes del código en una estructura de control condicional.
 	3. La forma de las sentencias que podrán ser ejecutadas cuando se cumpla la condición. Dichas sentencias pueden ser simples o compuestas, para este último caso el diseñador debe comenzar a pensar en introducir delimitadores de sentencia, como en el caso de los "***;***".
 
 >[!tldr] Selectores Anidados
@@ -52,7 +52,7 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 
 ##### Iteración
 
-Permiten que una sentencia o grupo de sentencias se ejecuten cero o más veces, la ventaja con la que cuentan los lenguajes que incorporan este tipo de estructuras es que los vuelve más flexibles, la escritura de los programas se torna más simple y como consecuencia los programas resultantes son más cortos, al igual que las estructuras de selección, la secuencia de iteración sé pueden categorizar en:
+Permiten que una sentencia o grupo de sentencias se ejecuten cero o más veces, la ventaja con la que cuentan los lenguajes que incorporan este tipo de estructuras es que los vuelve más flexibles, la escritura de los programas se torna más simple y como consecuencia más cortos, al igual que las estructuras de selección, la secuencia de iteración sé pueden categorizar en:
 
 - **Sentencias iterativas controladas por contador**: Este tipo de estructuras constan de 3 elementos principales, una variable de loop la cual va a especificar el valor inicial, una expresión de control para la variable y el incremento que va a sufrir la variable de loop en cada iteración. Esta estructura resulta extremadamente útil cuando la cantidad de ciclos que se debe realizar en conocida. Esta estructura mejora la legibilidad y confiabilidad de los programas y evita que se generen resultados inesperados.
 - **Sentencias iterativas controladas lógicamente**: Estas estructuras se utilizan cuando no se sabe la cantidad de iteraciones que se deben realizar para resolver el problema. Al igual que en las sentencias de selección, en estas estructuras también se deben tener algunas consideraciones en cuanto al diseño, en primer lugar se debe establecer si la evaluación de la condición va a ser previa a entrar al loop (un ciclo while clasico) o si la evaluación va a ser posterior al entrar al loop (do-while). Existen lenguajes de programación que emplean ambos métodos, pero otros que eligen solo una opción sobre la otra, como es el caso de Ada.
